# Foo

./: .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.py
Bar/: CMakeLists.txt  bar.cpp
Car/: CMakeLists.txt  README.md  build.bat  car.cpp  conanfile.py
cmake/: Config.cmake.in  ConfigVersion.cmake.in
src/: foo_json.cpp  foo_json.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
